# kraken_arbitrage

./: .env_example.txt  Cargo.toml  Dockerfile  README.md  notes.txt
src/: brain_bot.rs  config.rs  data.rs  graph.rs  logger.rs  macros.rs  main.rs  math_graph.rs  telegram.rs  tokenfilter.rs  tokens.rs  websocket.rs
