[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
lazy_static = "1.5"
url = "2.2"
dotenv = "0.15"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
hex = "0.4"
once_cell = "1.17.1"
futures = "0.3"
nix = "0.25.0"
ring = "0.17"
tokio-stream = "0.1"
hashbrown = "0.12"
chrono = "0.4"
prometheus = "0.13"
crossbeam = "0.8"
dashmap = "6.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.16"
petgraph = "0.6.3"
itertools = "0.10.5"
rand = "0.8"
teloxide = { version = "0.12", features = ["macros"] }
surge-ping = "0.8"
async-channel = "2.0"

[profile.dev]
debug = true 

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
opt-level = 3
